--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 
 # Build directories
 build-CasterSoundboard-Desktop_Qt_5_8_0_GCC_64bit-Debug/
+build-CasterSoundboard-Desktop_Qt_5_8_0_clang_64bit-Debug/
