Install desktop, appdata and icon file (#26)

--- a/CasterSoundboard.desktop
+++ b/CasterSoundboard.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Name=CasterSoundboard
 Comment=A soundboard for hot-keying and playing back sounds
-Icon=CasterSoundboard.png
+Icon=CasterSoundboard
 Exec=CasterSoundboard
 NoDisplay=false
 Categories=AudioVideo;
